create bookmark from url
